※Checkout頁面 更改一些結帳頁面存取的邏輯

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -326,7 +326,7 @@
                     console.log(pId);
                     $.ajax({
                         type: "POST",
-                        url: '/Cart/DeleteCartItem',
+                        url: '/Checkout/DeleteCartItem',
                         data: { id: pId },
                         success: function (response) {
                             //同步更新刪除畫面上的商品
