※忘記密碼頁面 ●修正寄送信件alert跳undefined的問題 ●修正更改密碼完無法返回Login頁面

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ForgetPassword.cshtml
@@ -242,11 +242,15 @@
                 contentType: "application/json",
                 data: JSON.stringify(postData),
                 success: function (response) {
-                    if (response.ErrMsg) {
-                        alert(response.ErrMsg);
+                    console.log(response); // 檢查 response 的內容
+                    var errMsg = response.errMsg; // 注意這裡使用小寫 errMsg
+                    var resultMsg = response.resultMsg; // 注意這裡使用小寫 resultMsg
+
+                    if (errMsg) {
+                        alert(errMsg);
                         return false; // 失敗時返回 false
                     }
-                    alert(response.ResultMsg);
+                    alert(resultMsg);
                     return true; // 成功時返回 true
                 },
                 error: function (err) {
