--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿
+
+@{
     Layout = null;
 }
 
@@ -215,57 +217,68 @@
     <script src="~/js/myScript.js"></script>
     <script>
         $(document).ready(function () {
-        $('#resetPwdBtn').click(function () {
-            DoResetPwd()
-        })
+            $('#resetPwdBtn').click(function () {
+                DoResetPwd()
+            })
 
-        function DoResetPwd() {
-            var form = document.forms["resetPwdForm"];
-            var newPwd = form.elements["NewUserPwd"].value;
-            var checkPwd = form.elements["CheckUserPwd"].value;
+            function DoResetPwd() {
+                var form = document.forms["resetPwdForm"];
+                var newPwd = form.elements["NewUserPwd"].value;
+                var checkPwd = form.elements["CheckUserPwd"].value;
 
-            if (newPwd !== checkPwd) {
-                document.querySelector('#ErrorMsg').innerHTML = "密碼不相符";
-                return;
-            }
+                if (newPwd !== checkPwd) {
+                    document.querySelector('#ErrorMsg').innerHTML = "密碼不相符";
+                    return;
+                }
 
-            //組合資料
-            var postData = {
-                NewUserPwd: newPwd,
-                CheckUserPwd: checkPwd,
-            };
+                //組合資料
+                var postData = {
+                    NewUserPwd: newPwd,
+                    CheckUserPwd: checkPwd,
+                };
 
-            console.log(postData)
 
-            var requestOptions = {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(postData)
-            };
+                var requestOptions = {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(postData)
+                };
 
-            fetch('@Url.Action("DoResetPwd", "MemberLogin")', requestOptions)
-                .then(function (response) {
-                        console.log("Response status code:", response.status); 
+                fetch('@Url.Action("DoResetPwd", "MemberLogin")', requestOptions)
+                    .then(function (response) {
+                        console.log('get response');
                         console.log(response);
-                    if (response.ok) {
-                        return response.json();
-                    } else {
-                        throw new Error('Network response was not ok');
-                    }
-                })
-                .then(function (data) {
-                        console.log("Response data:", data); 
-                    if (data.ErrMsg) {
-                        document.querySelector('#ErrorMsg').innerHTML = data.ErrMsg;
-                    } else {
-                        alert(data.ResultMsg);
-                        location.href = '@Url.Content("~/MemberLogin/Login")';
-                    }
-                })
-                .catch(function (error) {
-                    document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
-                });
-        }
+                        if (response.ok == true) {
+                            alert('更新成功');
+                            window.location.href = '@Url.Content("~/MemberLogin/Login")';
+                        }
+
+
+                        return true; // 成功時返回 true
+                        //if (response.ok) {
+                        //        console.log('in response.ok')
+                        //    console.log(response.json())
+                        //    console.log('ready return json')
+                        //    return response.json();
+                        //} else {
+                        //    throw new Error('Network response was not ok');
+                        //}
+                    })
+                //.then(function (data) {
+                //        console.log('indata')
+                //        console.log(data)
+                //        //console.log("Response data:", data);
+                //    if (data.ErrMsg) {
+                //        document.querySelector('#ErrorMsg').innerHTML = data.ErrMsg;
+                //    } else {
+                //        alert(data.ResultMsg);
+                //        location.href = '@Url.Content("~/MemberLogin/Login")';
+                //    }
+                //})
+                //.catch(function (error) {
+                //    document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
+                //});
+            }
         });
 
     </script>
