--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -71,10 +71,12 @@
                 <div class="right-product-box">
                     <div class="d-flex text-center align-items-center flex-wrap justify-content-between mb-4">
                         <h3>篩選 <i class="fa-solid fa-grip-lines-vertical"></i></h3>
+
                         
+                        <div class="w-50" style="text-align:end">商品排序</div>
                         <div class="shop-filter-select ">
                             <select id="selOrder" class="form-select form-select-md" aria-label="排序方式">
-                                <option value="0" selected>商品排序</option>
+                                <option value="0" selected>無</option>
                                 <option value="1">熱賣程度:高到低</option>
                                 <option value="2">熱賣程度:低到高</option>
                                 <option value="3">上架時間:新到舊</option>
@@ -84,10 +86,12 @@
                             </select>
                         </div>
 
-
-                        <div class="shop-filter-select  ">
+                        <div >以品牌篩選</div>
+                        <div class="shop-filter-select">
+                            
                             <select id="selBrand" class="form-select form-select-md" aria-label="品牌篩選">
-                                <option value="0" selected>以品牌篩選</option>
+                                
+                                <option value="" selected>無</option>
                                 @foreach(var p in Model.DistinctBy(p=>p.pBrandName).OrderBy(p=>p.pBrandName))
                                 {
                                     <option value="@p.pBrandName">@p.pBrandName</option>
@@ -99,7 +103,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-center align-items-center justify-content-between">
-                        <span> 共 @Model.Count() 項商品</span>
+                        <span> 共 @ViewBag.ProductCount 項商品</span>
                         <div class="filter">
                             <span>顯示</span>
                             <div class="shop-filter-select">
